src/objects/ETL_Report_Config_Data__mdt.object
<CustomObject>
    <description>Used to strore the config data which is used to send the report when ETL Load the data in the MCC Data Object</description>
    <fields>
        <fullName>Active_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when the check box is checked we send out the email to the particular address</description>
        <label>Active Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <description>Used to store the Origination URL</description>
        <label>Destination_Org</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Used to capture the email Address</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Used to store the File Type</description>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding Cred Mass Status Update</fullName>
                    <default>true</default>
                    <label>Onboarding Cred Mass Status Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <description>Used to store the plan ID</description>
        <label>Plan Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                    <default>true</default>
                    <label>IL1</label>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <description>Number of accounts where provder id is not null and needs to exclude this year, the code in ETLReportingNotification will sum up the values this year values and others</description>
        <label>Total Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ETL Report Config Data</label>
    <pluralLabel>ETL Report Config Datas</pluralLabel>
</CustomObject>